# cmake_sandbox

./: .gitignore  CMakeLists.txt  README.md
OpenSSL/: README.md  include CMakeLists.txt  old-CMakeLists.txt
android/: CMakeLists.txt  README.md  run_cmake.bat  scmake.bat  test.bat
android/app-in/: build.gradle.part  local.properties
android/app-in/app/: build.gradle
android/build_old/: build.gradle  gradle.properties  local.properties  settings.gradle
android/build_old/app/src/main/java/com/example/karl/myapplication/: MainActivity.java
armadillo/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt
armadillo/src/: CMakeLists.txt  main.cpp
boost/: .gitignore  CMakeLists.txt  README.md
boost/sources/: http_client_async_ssl.cpp  http_client_sync.cpp  http_client_sync_ssl.cpp  main.cpp
boost/sources/http/: HttpClient.cpp  HttpClient.h
boost/superbuild/: CMakeLists.txt
ffmpeg/: CMakeLists.txt  README.md
ffmpeg/libs/ffmpeg/: readme.txt
ffmpeg/libs/ffmpeg/static/lib/pkgconfig/: libavcodec.pc  libavformat.pc
ffmpeg/src/: dshow_capture_video.c  main.cpp  webcam.cpp
ffmpeg/src/ffmpeg/: decode_video.c
ffmpeg/superbuild/: CMakeLists.txt
ffmpeg/unused/libs/ffmpeg/static/lib/pkgconfig/: libavfilter.pc  libavutil.pc  libswresample.pc
glew/: external_project.txt  find_package.txt
gtest/: CMakeLists.txt  hello_test1.cpp  hello_test2.cpp
libs/ffmpeg/static/lib/pkgconfig/: libavdevice.pc  libswscale.pc
libuv/: CMakeLists.txt  main.cpp
libuv/cmake/: Findlibuv.cmake
libuv/sources/: http_request_call.cpp  http_request_call.h
libuv/superbuild/: CMakeLists.txt
plog/: CMakeLists.txt  MemoryBufferAppender.h  main.cpp
plog/superbuild/: CMakeLists.txt
postgresql/: CMakeLists.txt  main.cpp
postgresql/superbuild/: CMakeLists.txt
postgresql/superbuild/patch/postgresql.14.0/: Install.pm  Mkvcbuild.pm
postgresql/superbuild/patch/restbed.4.8/: CMakeLists.txt  context_placeholder.hpp  context_placeholder_base.hpp  context_value.hpp  http.hpp  logger.hpp  request.hpp  resource.hpp  response.hpp  rule.hpp  service.hpp  session.hpp  session_manager.hpp  settings.hpp  ssl_settings.hpp  string.hpp  uri.hpp  web_socket.hpp  web_socket_message.hpp
postgresql/superbuild/patch/zlib1.2.11/: CMakeLists.txt
spdlog/: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
spdlog/superbuild/: CMakeLists.txt  CMakePresets.json
tools/ffmpeg/: readme.txt
tools/ffmpeg/shared/: README.txt
tools/ffmpeg/shared/docs/man/man1/: ffmpeg-all.1  ffmpeg-codecs.1  ffmpeg-filters.1  ffmpeg-formats.1  ffmpeg-protocols.1  ffplay-all.1  ffprobe-all.1
tools/ffmpeg/shared/include/libavutil/: ffversion.h
tools/ffmpeg/shared/lib/: avfilter-8.def  avformat-59.def  avutil-57.def  swscale-6.def
tools/ffmpeg/shared/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
webrtc/: CMakeLists.txt  README.md
webrtc/superbuild/: CMakeLists.txt  webrtc_log.txt
zlib/: CMakeLists.txt  main.cpp
zlib/sources/: gvrzip.cpp  gvrzip.h
zlib/superbuild/: CMakeLists.txt
